@@ -28,13 +28,13 @@
 
 \layout Title
 \added_space_top vfill \added_space_bottom vfill 
-gputils 0.13.2
+gputils 0.13.3
 \layout Author
 
 James Bowman and Craig Franklin 
 \layout Date
 
-May 5, 2005
+July 31, 2005
 \layout Standard
 
 
@@ -7134,7 +7134,7 @@ Where options can be one of:
 \added_space_top 0.3cm \added_space_bottom 0.3cm \align center 
 
 \begin_inset  Tabular
-<lyxtabular version="3" rows="16" columns="2">
+<lyxtabular version="3" rows="17" columns="2">
 <features>
 <column alignment="left" valignment="top" leftline="true" width="0pt">
 <column alignment="block" valignment="top" leftline="true" rightline="true" width="4in">
@@ -7410,7 +7410,7 @@ Create a stack section
 \end_inset 
 </cell>
 </row>
-<row topline="true" bottomline="true">
+<row topline="true">
 <cell alignment="left" valignment="top" topline="true" leftline="true" usebox="none">
 \begin_inset Text
 
@@ -7425,6 +7425,24 @@ v
 \layout Standard
 
 Print gplink version information and exit
+\end_inset 
+</cell>
+</row>
+<row topline="true" bottomline="true">
+<cell alignment="left" valignment="top" topline="true" leftline="true" usebox="none">
+\begin_inset Text
+
+\layout Standard
+
+w
+\end_inset 
+</cell>
+<cell alignment="left" valignment="top" topline="true" leftline="true" rightline="true" usebox="none">
+\begin_inset Text
+
+\layout Standard
+
+Disable processor mismatch warning.
 \end_inset 
 </cell>
 </row>
